# stamod2023

./: .gitignore  .valgrind.supp  CMakeLists.txt  Dockerfile  build.sh  docker.sh  doxygen.sh
cmd/: main.cpp
controller/: main.cpp  model_logic.h  model_runner.h  modeling_model_runner.h  p_val_model_runner.h
docs/: Doxyfile
gui/: application.h  config.h  graph.h  graph_config.h  graph_input.h  graph_table.h  gui.h  input.h  regraph.h  window.h
internal/: defer.h  pair.h  random.h  vector.h
model/: experiment.cpp  experiment.h  model.cpp  model.h  model_chen.cpp  model_chen.h  model_table.cpp  model_table.h  pair.h  probdist.cpp  probdist.h  random.h  stat.h
view/: comparing_histogram.h  main_window.h  modeling_graph_widget.h  p_val_graph_widget.h
